@@ -21,7 +21,13 @@ redirect_links = getattr(ptool.site_properties, 'redirect_links', False)
 can_edit = mtool.checkPermission('Modify portal content', context)
 
 if redirect_links and not can_edit:
-    return context.REQUEST.RESPONSE.redirect(context.getRemoteUrl())
+    if context.getRemoteUrl().startswith('.'):
+        # we just need to adapt ../relative/links, /absolute/ones work anyway
+        # -> this requires relative links to start with ./ or ../
+        context_state = context.restrictedTraverse('@@plone_context_state')
+        return context.REQUEST.RESPONSE.redirect(context_state.canonical_object_url()  + '/' + context.getRemoteUrl())
+    else:
+        return context.REQUEST.RESPONSE.redirect(context.getRemoteUrl())
 else:
     # link_view.pt is a template in the plone_content skin layer
     return context.link_view()
